--- a/tina-compiler/build.gradle
+++ b/tina-compiler/build.gradle
@@ -11,5 +11,5 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.google.auto.service:auto-service:1.0-rc3'
     implementation 'com.squareup:javapoet:1.9.0'
-    implementation project(':tina-compiler')
+    implementation project(':tina-annotation')
 }
