--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.tp.library">
 
+    <!-- 访问网络 -->
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
+        android:name="com.tp.library.BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
