--- a/tina/build.gradle
+++ b/tina/build.gradle
@@ -24,8 +24,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'org.aspectj:aspectjrt:1.8.10'
-    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
-    implementation 'com.alibaba:fastjson:1.2.47'
+    compile 'com.squareup.okhttp3:okhttp:3.11.0'
+    compile 'com.alibaba:fastjson:1.2.47'
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation project(':tina-annotation')
 }
