--- a/tina-annotation/build.gradle
+++ b/tina-annotation/build.gradle
@@ -1,11 +1,10 @@
 apply plugin: 'java'
 apply plugin: 'com.github.dcendents.android-maven'
 
-group = 'com.github.tpa'
-
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 }
+apply from: rootProject.file('gradle/publish.gradle')
