tina update to 1.1.0-beta

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,6 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    api 'com.tpa.client:tina:1.0.1'
+    implementation 'com.tpa.client:tina:1.1.0-beta'
     annotationProcessor 'com.tpa.client:tina-compiler:1.0.0'
 }
