--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.tpa.client:tina:1.1.1-beta'
+//    implementation 'com.tpa.client:tina:1.1.1-beta'
+    implementation project(":tina")
     annotationProcessor 'com.tpa.client:tina-compiler:1.0.0'
     debugImplementation 'com.readystatesoftware.chuck:library:1.1.0'
     releaseImplementation 'com.readystatesoftware.chuck:library-no-op:1.1.0'
